--- a/loops_tests/index.html
+++ b/loops_tests/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loops</title>
-    <script src="for.js" defer></script>
+    <script src="foreach.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Loops</h1>
 </body>
 </html>
